[package]
name = "rs2009-client"
version = "1.0.0"
edition = "2021"
authors = ["nuniesmith"]
description = "A Rust implementation of the 2009scape client"

[dependencies]
# Async runtime
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"

# Networking
bytes = "1.4.0"
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = "0.1.14"

# Web interface
warp = "0.3.5"
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"

# Compression
bzip2 = "0.4.4"
flate2 = "1.0.26"

# Cryptography
rand = "0.8.5"
sha-1 = "0.10.1"
whirlpool = "0.10.4"

# Utilities
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.10.0"
config = "0.13.3"
byteorder = "1.4.3"
memmap2 = "0.6.2"
chrono = "0.4.24"

# ECS (optional)
legion = "0.4.0"

[lib]
name = "rs2009_client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

